# my_all_test_project

./: .gitignore  README.md  copyfiletossh.sh  exp.sh  getredis.py  test.sh
filedir/: CMakeLists.txt
filedir/src/: Cplusplus.cpp  chronodemo.cpp  getclock.cpp  optdemo.cpp  prctl.cpp  printfdemo.cpp  redisdemo.cpp  serial.cpp  staticregister.cpp  youhua.cpp
filedir/src/C/: linuxc.c  readline.c
filedir/src/Cplus/: Cplusplus.cpp  cplusthread.cpp  normal.cpp  static_cpp_demo.cpp  static_cpp_demo.h  stl.cpp
filedir/src/book/cplusbingxing/: first.cpp  five.cpp  four.cpp  question  second.cpp  seven.cpp  six.cpp  third.cpp
filedir/src/boost/: boostcoroutines2.cpp  boosttest.cpp
filedir/src/boostlogdemo/: boostlogdemo.cpp  myboostlog.config
filedir/src/filedescriptor/: af_unixcli.c  af_unixser.c
filedir/src/json/: ce.json  jsontest.cpp  readjsonconfig.cpp  testfile.txt
filedir/src/linux/: corefile.cpp  mypthread.cpp  wrid.c  writefifo.c
filedir/src/math/: mymath.c  mymath.h
filedir/src/sharedmemory/: memory.cpp  memory.h  semlock.cpp  semlock.h
filedir/srctest/: candcplususe.cpp  expect.cpp  mytest.cpp
python_dir/: demofile  ssh_copy_file.py
shell_dir/bash_demo/: 1.c  a.out  get_command.sh
shell_dir/find_demo/: finddemo.sh
shell_dir/ssh_demo/: sshdemo.sh
